--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
       <address>
         <ul>
           <li>
-            <a class="address-link" href="tel: + 38 (096) 000 00 07"
-              >+ 38 (096) 000 00 07</a
-            >
+            <a class="address-link" href="tel: +380960000007">+380960000007</a>
           </li>
           <li>
             <a class="address-link" href="beautyzone@gmail.com"
