--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <address>
         <ul>
           <li>
-            <a class="address-link" href="tel: +380960000007">+380960000007</a>
+            <a class="address-link" href="tel:+380960000007">+380960000007</a>
           </li>
           <li>
             <a class="address-link" href="beautyzone@gmail.com"
@@ -135,7 +135,7 @@
               >ул. Тараса Шевченко, 5, Бровары, Киевская область, Украина</a
             >
           </li>
-          <li><a href="tel: + 38 (096) 000 00 07"></a></li>
+          <li><a href="tel:+380960000007"></a></li>
           <!-- call -->
           <li><a href="#"></a></li>
           <!-- facebook icon -->
